# linuxCppTemplate

./: CMakeLists.txt  README.md
scripts/: build.sh  launch.sh  run.sh
src/: main.cc
